--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,12 @@ header, main {
 nav {
     background-color: #2f303a;
     width: 90%;
-    margin: auto;
+    margin:0 auto;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: space-between;
-
+   
 }
 nav ul {
     margin-top: 30px;
@@ -42,46 +42,106 @@ nav ul li a {
     color: #FFF;
 
 }
+a img {
+    margin-top: 16px;
+   
+}
 
 
 .container {
     display: flex;
     width: 90%;
-    margin: auto;
+    margin: 0 auto;
 
 }
-.container .left, .container .right {
+.left, .right {
     width: 50%;
 }
-.left {
+.left img {
+    width: 90%;
     
 }
 .right {
-  
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
     
-}
-.right h1 {
-    margin-top: 182px;
-}
-.right P {
-
 }
 .right .join-now {
     border-radius: 10px;
     border: none;
     padding: 12px;
     width: 90px;
+    background-color: #1762A7;
     color: #FFF;
 }
-.cercle-1 {
-  position: absolute;
-  width: 25vw;
-  height: 25vw;
-  border-radius: 50%;
-  background-color: rgb(188, 58, 128, .1);
-  bottom: 5vw;
-  left: 5vw;
-  z-index: -1;
+
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+    }
+
+    nav ul {
+        flex-direction: column;
+        margin-top: 10px;
+    }
+
+    nav ul li a {
+        margin-left: 0;
+        margin-top: 10px;
+        font-size: 20px;
+    }
+
+    .container {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .left, .right {
+        width: 100%;
+        text-align: center;
+    }
+
+    .left img {
+        width: 100%;
+    }
+
+    .right .join-now {
+        width: 90px;
+    }
 }
 
+@media (max-width: 480px) {
+    nav {
+        width: 100%;
+    }
 
+    nav ul {
+        margin-top: 5px;
+    }
+
+    nav ul li a {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .left img {
+        width: 100%;
+    }
+
+    .right .join-now {
+        width: 100%;
+        padding: 15px;
+    }
+    nav ul{
+        display: none;
+    }
+
+    
+    
+}
